componente button criado e ajustes nele

--- a/src/componets/Task.css
+++ b/src/componets/Task.css
@@ -5,6 +5,6 @@
     display: flex;
     border-radius: 5px;
     justify-content: space-between;
-    color: white;
+    color: #eee;
     align-items: center;
 }
