--- a/src/componets/AddTask.css
+++ b/src/componets/AddTask.css
@@ -1,11 +1,10 @@
 .add-task-container {
-    margin: 15px 0px;
+    margin: 15px 0;
     width: 100%;
     display: flex;
 }
 
-
-.add-task-input{
+.add-task-input {
     height: 40px;
     padding: 0 10px;
     border-radius: 5px;
@@ -14,4 +13,9 @@
     background-color: #444;
     color: #eee;
     font-size: 16px;
+}
+
+.add-task-button-container {
+    margin-left: 10px;
+    flex:1;
 }
