--- a/src/componets/Button.css
+++ b/src/componets/Button.css
@@ -1,7 +1,7 @@
 .button{
     background-color: chartreuse;
     height: 40px;
-    padding: 0 10px;
+    padding: 0px 10px;
     border-radius: 5px;
     width: 100%;
     font-size: 16px;
